# Test_Android_Kanji

./: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  google-services.json
app/keystores/: Command_for_certificate_fingerprint  Key_details  KeystoreDetails.txt  android_keystore-pwd  debug.keystore  private_key.pepk  tfi_Darkarta.jks  upload-keystore.jks
app/keystores/export/: private_key.pepk
app/src/androidTest/java/com/example/test_android_kanji/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/gameCpp/: AchieveRoom.cpp  AlphaControl.cpp  Animation.cpp  AnimationStream.cpp  Application.cpp  AssetsStringTable.cpp  AudioData.cpp  AudioSample.cpp  AudioSlave.cpp  Award.cpp  AwardManager.cpp  AwardsRoom.cpp  Background.cpp  Banners.cpp  Bezier2D.cpp  BitmapText.cpp  CAndroidUIEditField.cpp  CVideo.cpp  Camera.cpp  Circle.cpp  ClickablePolygon.cpp  ClickableRectangle.cpp  ComboInventory.cpp  Control.cpp  Credits.cpp  Cursor.cpp  CustomAnimGroup.cpp  CustomAnimator.cpp  Data.cpp  Debugger.cpp  DialogSystem.cpp  DistMesh.cpp  Easing.cpp  EndCutscene.cpp  ExtrasComicControl.cpp  ExtrasCutscenePlayer.cpp  ExtrasMenuControl.cpp  FlyingInsects.cpp  Fonts.cpp  FoundInvPopup.cpp  (+74 more)
app/src/main/cpp/gameCpp/Levels/: EndOfDemoScene.cpp  Flowers.cpp  GridPuzzle.cpp  L1_S1_Beach.cpp  L1_S1_PZKidsPainting.cpp  L1_S2_Frontyard.cpp  L1_S2_PZFuse.cpp  L1_S3_DoorHO.cpp  L1_S3_Foyer.cpp  L1_S3_PZShelf.cpp  L1_S4_Bedroom.cpp  L1_S4_PZDoor.cpp  L1_S4_PZPainting.cpp  L1_S5_HOTreasureRoom.cpp  L1_S5_PZDynamiteMaking.cpp  L1_S5_TreasureRoom.cpp  L1_S5_TunnelDoor.cpp  L1_S6_BoatShed.cpp  L1_S6_HOBoatShed.cpp  L1_S7_Boatdock.cpp  L2S1_Pop1HoneyComb.cpp  L2S1_Pop2UndergroundDoor.cpp  L2S1_Pop3AloeveraPlant.cpp  L2S1_Pop4ClearWater.cpp  L2S1_Pop5Scrapper.cpp  L2S2_Pop1NagaHead.cpp  L2S2_Pop2Frankinscence.cpp  L2S2_Pop3Koolam.cpp  L2S2_Pop4Pearls.cpp  L2S3_Pop1Turmeric.cpp  L2S4_Pop1WoodCut.cpp  L2S4_Pop2FirePop.cpp  L2S4_Pop3OilStoneLamp.cpp  L2S4_Pop4StoneBrick.cpp  L2S4_Pop5Rake.cpp  L2S5_Pop1Vinegar.cpp  L2S5_Pop3Ember.cpp  L2S5_Pop5Basket.cpp  L2S5_Pop6Chart.cpp  L2S5_Pop7Moopan.cpp  (+232 more)
app/src/main/cpp/gameCpp/Levels/includes/: Flowers.h  GridPuzzle.h  L1_S1_Beach.h  L1_S1_PZKidsPainting.h  L1_S2_Frontyard.h  L1_S2_PZFuse.h  L1_S3_DoorHO.h  L1_S3_Foyer.h  L1_S3_PZShelf.h  L1_S4_Bedroom.h  L1_S4_PZDoor.h  L1_S4_PZPainting.h  L1_S5_HOTreasureRoom.h  L1_S5_PZDynamiteMaking.h  L1_S5_TreasureRoom.h  L1_S5_TunnelDoor.h  L1_S6_BoatShed.h  L1_S6_HOBoatShed.h  L1_S7_Boatdock.h  L2S1_Pop1HoneyComb.h  L2S1_Pop2UndergroundDoor.h  L2S1_Pop3AloeveraPlant.h  L2S1_Pop4ClearWater.h  L2S1_Pop5Scrapper.h  L2S2_Pop1NagaHead.h  L2S2_Pop2Frankinscence.h  L2S2_Pop3Koolam.h  L2S2_Pop4Pearls.h  L2S3_Pop1Turmeric.h  L2S4_Pop1WoodCut.h  L2S4_Pop2FirePop.h  L2S4_Pop3OilStoneLamp.h  L2S4_Pop4StoneBrick.h  L2S4_Pop5Rake.h  L2S5_Pop1Vinegar.h  L2S5_Pop3Ember.h  L2S5_Pop5Basket.h  L2S5_Pop6Chart.h  L2S5_Pop7Moopan.h  L2S6_Pop1StonesNKnife.h  (+231 more)
app/src/main/java/com/bigfishgames/kanji/: KanjiActivity.java  KanjiGLSurfaceView.java  KanjiGameLib.java  KanjiMediaPlayer.java  KanjiMoviePlayer.java  KanjiNotificationReceiver.java  KanjiSound.java
app/src/main/java/com/example/test_android_kanji/: AssetDownloader.java  MainActivity.java  UserInfo.java
app/src/main/res/layout/: asset_downloader.xml
app/src/main/res/values/: integers.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/example/test_android_kanji/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
kanji/src/org/nativegame/: NativeFrameClient.java
res/headers/android/: AndroidIo.h  KAnimator.h  KBase64.h  KBatch.h  KBatchGLES.h  KBatchGLES2.h  KBezier.h  KChecksum.h  KCounter.h  KDictionary.h  KGame.h  KGameScreen.h  KGestureArea.h  KGraphic.h  KGraphicGLES.h  KGraphicGLES2.h  KHashTable.h  KHashTableLong.h  KImage.h  KImageHandler.h  KIniReader.h  KInput.h  KJSON.h  KKeyTable.h  KList.h  KManagedBitmapFont.h  KManagedFont.h  KManagedGraphic.h  KManagedModel.h  KManagedSample.h  KManagedShader.h  KManagedVideo.h  KMath2d.h  KMath3d.h  KMiscTools.h  KModel.h  KObjectBase.h  KObjectListable.h  KPTK.h  KPixelShader.h  (+47 more)
res/headers/android/GameHeaders/: AchieveRoom.h  Afxres.h  AlphaControl.h  Animation.h  AnimationStream.h  Application.h  AssetsStringTable.h  AudioData.h  AudioSample.h  AudioSlave.h  Award.h  AwardInterface.h  AwardManager.h  AwardsRoom.h  Background.h  Banners.h  Bezier2D.h  BitmapText.h  BuildConstants.h  CVideo.h  Camera.h  Cell.h  Cheats.h  Circle.h  ClickablePolygon.h  ClickableRectangle.h  ComboInventory.h  Console.h  Constants.h  Control.h  ControlEnums.h  Credits.h  Cursor.h  CustomAnimGroup.h  CustomAnimator.h  CutsceneEnums.h  DataEnums.h  Debugger.h  DialogSystem.h  DistMesh.h  (+103 more)
res/headers/android/rapidjson/: document.h
